--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -1,70 +1,63 @@
-
 <!DOCTYPE html>
-<html lang=\"es\">
+<html lang="es">
 <head>
-    <meta charset=\"UTF-8\" />
-    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1\" />
-    <title>Quiénes Somos — Raíz Cervecera</title>
-    <meta name=\"description\" content=\"Raíz Cervecera — Cervezas artesanales desde Quilpué, Chile.\" />
-    <link rel=\"preconnect\" href=\"https://fonts.googleapis.com\">
-    <link rel=\"preconnect\" href=\"https://fonts.gstatic.com\" crossorigin>
-    <link href=\"https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap\" rel=\"stylesheet\">
-    <link rel=\"stylesheet\" href=\"styles.css\">
+  <title>Quienes somos — Raíz Cervecera</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    :root { --bg-url: url('Fondo_raiz.jpg'); }
+    html, body { height: 100%; }
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
+      color: #f5f5f5;
+      background-image: var(--bg-url);
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+    }
+    .overlay { min-height: 100%; background: rgba(0,0,0,0.45); display: flex; flex-direction: column; }
+    header { backdrop-filter: blur(2px); -webkit-backdrop-filter: blur(2px); }
+    .nav { display:flex; gap:1rem; padding:1rem; align-items:center; justify-content:center; flex-wrap:wrap; }
+    .nav a { color:#ffd56b; text-decoration:none; font-weight:600; }
+    .nav a:hover { text-decoration: underline; }
+    main { flex:1; display:grid; place-items:center; padding:2rem; text-align:center; }
+    .card { background: rgba(0,0,0,0.35); border: 1px solid rgba(255,213,107,0.4); border-radius:12px; padding:2rem 2.25rem; max-width: 860px; }
+    .brand { font-size: clamp(1.8rem, 4vw, 2.6rem); margin: 0 0 0.5rem; letter-spacing: 0.6px; }
+    .subtitle { margin: 0.25rem 0 0.75rem; opacity: 0.9; }
+    footer { padding: 1rem; text-align:center; font-size:0.95rem; color:#eaeaea; }
+    footer a { color:#ffd56b; text-decoration:none; }
+    footer a:hover { text-decoration: underline; }
+    .social { display:inline-flex; gap:.75rem; align-items:center; }
+  </style>
 </head>
 <body>
+  <div class="overlay">
     <header>
-        <div class=\"container nav\">
-            <a href=\"index.html\" class=\"brand\" aria-label=\"Inicio\">
-                <span class=\"logo-mark\" aria-hidden=\"true\"></span>
-                <span>Raíz Cervecera</span>
-            </a>
-            <nav aria-label=\"Principal\">
-                <ul>
-                    <li><a href=\"index.html\">Inicio</a></li>
-                    <li><a href=\"quienes-somos.html\">Quienes somos</a></li>
-                    <li><a href=\"cervezas.html\">Nuestra Cervezas</a></li>
-                    <li><a href=\"contacto.html\">Contacto</a></li>
-                </ul>
-            </nav>
-            <a class=\"btn-login\" href=\"login.html\">Login</a>
-        </div>
+      <nav class="nav" aria-label="Principal">
+  <a href="index.html">Inicio</a>
+  <a href="quienes-somos.html">Quienes somos</a>
+  <a href="cervezas.html">Nuestra Cervezas</a>
+  <a href="contacto.html">Contacto</a>
+  <a href="login.html">Login</a>
+</nav>
     </header>
-
-        <main>
-            <section class=\"hero\">
-                <div class=\"container\">
-                    <h1>Quiénes Somos</h1>
-                    <p>Nuestra historia, propósito y el equipo detrás de Raíz Cervecera.</p>
-                </div>
-            </section>
-            <section class=\"section\">
-                <div class=\"container\">
-                    <div class=\"grid\">
-                        <article class=\"card\">
-                            <h3>Origen</h3>
-                            <p>Nacimos en Quilpué con la idea de crear cervezas que hablen del territorio y sus raíces.</p>
-                        </article>
-                        <article class=\"card\">
-                            <h3>Filosofía</h3>
-                            <p>Pequeños lotes, ingredientes seleccionados y procesos cuidadosos para una calidad constante.</p>
-                        </article>
-                        <article class=\"card\">
-                            <h3>Equipo</h3>
-                            <p>Maestros cerveceros, diseñadores y amigos que aportan su talento en cada batch.</p>
-                        </article>
-                    </div>
-                </div>
-            </section>
-        </main>
-        
+    <main>
+      <section class="card">
+        <h1 class="brand">Quienes somos</h1>
+        <p class="subtitle">Conoce nuestra historia, misión y el equipo detrás de Raíz Cervecera.</p>
+        <p>Contenido en preparación.</p>
+      </section>
+    </main>
     <footer>
-        <div class=\"container footer\">
-            <div>© Raíz Cervecera · Quilpué, Chile</div>
-            <div class=\"social\">
-                <a href=\"https://instagram.com/raizcervecera\" target=\"_blank\" rel=\"noopener\">Instagram</a>
-                <a href=\"https://web.facebook.com/RaizCervecera\" target=\"_blank\" rel=\"noopener\">Facebook</a>
-            </div>
-        </div>
+      © Raíz Cervecera · Quilpué, Chile · 
+<span class="social">
+  <a href="https://instagram.com/raizcervecera" target="_blank" rel="noopener">Instagram</a>
+  <span>·</span>
+  <a href="https://web.facebook.com/RaizCervecera" target="_blank" rel="noopener">Facebook</a>
+</span>
     </footer>
+  </div>
 </body>
 </html>
