--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -46,7 +46,7 @@
     <main>
       <section class="card">
         <h1 class="brand">Quienes somos</h1>
-        <p class="subtitle">Conoce nuestra historia, misión y el equipo detrás de Raíz Cervecera.</p>
+        <p class="subtitle">Somos tres familias de la ciudad del sol - Quilpué, unidas para crear cerveza artesanal de alta calidad. Honramos nuestras raíces, utilizando ingreedientes selectos y procesos de cuidados para ofrecer una experiencia aut´ntica y carcana en cada botella..</p>
         <p>Contenido en preparación.</p>
       </section>
     </main>
