--- a/contacto.html
+++ b/contacto.html
@@ -1,63 +1,125 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <title>Contacto — Raíz Cervecera</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Contacto — Raíz Cervecera</title>
   <style>
-    :root { --bg-url: url('Fondo_raiz.jpg'); }
-    html, body { height: 100%; }
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
-      color: #f5f5f5;
-      background-image: var(--bg-url);
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-    }
-    .overlay { min-height: 100%; background: rgba(0,0,0,0.45); display: flex; flex-direction: column; }
-    header { backdrop-filter: blur(2px); -webkit-backdrop-filter: blur(2px); }
-    .nav { display:flex; gap:1rem; padding:1rem; align-items:center; justify-content:center; flex-wrap:wrap; }
-    .nav a { color:#ffd56b; text-decoration:none; font-weight:600; }
-    .nav a:hover { text-decoration: underline; }
-    main { flex:1; display:grid; place-items:center; padding:2rem; text-align:center; }
-    .card { background: rgba(0,0,0,0.35); border: 1px solid rgba(255,213,107,0.4); border-radius:12px; padding:2rem 2.25rem; max-width: 860px; }
-    .brand { font-size: clamp(1.8rem, 4vw, 2.6rem); margin: 0 0 0.5rem; letter-spacing: 0.6px; }
-    .subtitle { margin: 0.25rem 0 0.75rem; opacity: 0.9; }
-    footer { padding: 1rem; text-align:center; font-size:0.95rem; color:#eaeaea; }
-    footer a { color:#ffd56b; text-decoration:none; }
-    footer a:hover { text-decoration: underline; }
-    .social { display:inline-flex; gap:.75rem; align-items:center; }
+    :root { color-scheme: light dark; }
+    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif; margin: 0; background: #111; color: #eee; }
+    header, footer { padding: 1rem; background: #222; }
+    nav a { color: #eee; text-decoration: none; margin-right: .75rem; }
+    main { padding: 1.5rem; max-width: 900px; margin: 0 auto; }
+    h1 { margin-top: 0; }
+    form { display: grid; gap: 1rem; max-width: 700px; }
+    .field { display: grid; gap: .35rem; }
+    label { font-weight: 600; }
+    input, textarea, select { padding: .6rem .7rem; border-radius: .5rem; border: 1px solid #444; background: #181818; color: #eee; }
+    textarea { min-height: 140px; }
+    .row { display: grid; grid-template-columns: 1fr 1fr; gap: 1rem; }
+    .hint { font-size: .9rem; color: #aaa; }
+    .actions { display: flex; gap: .75rem; align-items: center; }
+    button { cursor: pointer; background: #f59e0b; color: #111; border: none; padding: .7rem 1rem; border-radius: .5rem; font-weight: 700; }
+    .social a { color: #f59e0b; }
+    .visually-hidden { position: absolute; left: -10000px; top: auto; width: 1px; height: 1px; overflow: hidden; }
   </style>
 </head>
 <body>
-  <div class="overlay">
-    <header>
-      <nav class="nav" aria-label="Principal">
-  <a href="index.html">Inicio</a>
-  <a href="quienes-somos.html">Quienes somos</a>
-  <a href="cervezas.html">Nuestra Cervezas</a>
-  <a href="contacto.html">Contacto</a>
-  <a href="login.html">Login</a>
-</nav>
-    </header>
-    <main>
-      <section class="card">
-        <h1 class="brand">Contacto</h1>
-        <p class="subtitle">Escríbenos para pedidos, colaboraciones o consultas.</p>
-        <p>Contenido en preparación.</p>
-      </section>
-    </main>
-    <footer>
-      © Raíz Cervecera · Quilpué, Chile · 
-<span class="social">
-  <a href="https://instagram.com/raizcervecera" target="_blank" rel="noopener">Instagram</a>
-  <span>·</span>
-  <a href="https://web.facebook.com/RaizCervecera" target="_blank" rel="noopener">Facebook</a>
-</span>
-    </footer>
-  </div>
+  <header>
+    <nav>
+      <a href="index.html">Inicio</a>
+      <a href="quienes-somos.html">Quienes somos</a>
+      <a href="cervezas.html">Nuestras Cervezas</a>
+      <strong>Contacto</strong>
+      <a href="login.html">Login</a>
+    </nav>
+  </header>
+
+  <main>
+    <h1>Contacto</h1>
+    <p>Escríbenos para pedidos, colaboraciones o consultas. Te responderemos a la brevedad.</p>
+
+    <!-- Envío directo a email usando FormSubmit -->
+    <form action="https://formsubmit.co/raizcervecera@outlook.com" method="POST">
+      <!-- Asunto del correo que recibirás -->
+      <input type="hidden" name="_subject" value="Nuevo contacto desde la web — Raíz Cervecera" />
+      <!-- Página de gracias tras enviar (ajusta si creas gracias.html) -->
+      <input type="hidden" name="_next" value="/gracias.html" />
+      <!-- Desactiva el captcha de FormSubmit si ya usas honeypot -->
+      <input type="hidden" name="_captcha" value="false" />
+      <!-- Honeypot contra bots (FormSubmit recomienda ocultarlo) -->
+      <input type="text" name="_honey" class="visually-hidden" aria-hidden="true" />
+
+      <div class="row">
+        <div class="field">
+          <label for="nombre">Nombre</label>
+          <input id="nombre" name="nombre" type="text" placeholder="Tu nombre" required />
+        </div>
+        <div class="field">
+          <label for="email">Correo electrónico</label>
+          <input id="email" name="email" type="email" placeholder="tucorreo@ejemplo.com" required />
+          <!-- Hace que el botón Responder apunte al remitente -->
+          <input type="hidden" name="_replyto" value="" />
+        </div>
+      </div>
+
+      <div class="field">
+        <label for="telefono">Teléfono (opcional)</label>
+        <input id="telefono" name="telefono" type="tel" placeholder="+56 9 1234 5678" />
+      </div>
+
+      <div class="row">
+        <div class="field">
+          <label for="asunto">Asunto</label>
+          <input id="asunto" name="asunto" type="text" placeholder="Pedido / Consulta / Colaboración" required />
+        </div>
+        <div class="field">
+          <label for="tipo">Tipo de consulta</label>
+          <select id="tipo" name="tipo" required>
+            <option value="Pedido">Pedido</option>
+            <option value="Colaboración">Colaboración</option>
+            <option value="Distribución">Distribución</option>
+            <option value="Otra">Otra</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="field">
+        <label for="mensaje">Mensaje</label>
+        <textarea id="mensaje" name="mensaje" placeholder="Cuéntanos en detalle cómo podemos ayudarte" required></textarea>
+        <p class="hint">Al enviar este formulario, aceptas que procesemos tus datos para responder a tu solicitud.</p>
+      </div>
+
+      <div class="actions">
+        <button type="submit">Enviar</button>
+        <span class="hint">Gracias por contactarnos 🍻</span>
+      </div>
+    </form>
+
+    <section class="social" style="margin-top:2rem;">
+      <p>
+        Síguenos: 
+        <a href="https://instagram.com/raizcervecera" target="_blank" rel="noopener">Instagram</a> ·
+        <a href="https://web.facebook.com/RaizCervecera" target="_blank" rel="noopener">Facebook</a>
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    © Raíz Cervecera · Quilpué, Chile
+  </footer>
+
+  <script>
+    // Vincula _replyto al valor actual del campo email antes de enviar
+    document.addEventListener('DOMContentLoaded', function(){
+      const form = document.querySelector('form');
+      const email = document.getElementById('email');
+      const replyto = form.querySelector('input[name="_replyto"]');
+      form.addEventListener('submit', function(){
+        replyto.value = email.value;
+      });
+    });
+  </script>
 </body>
 </html>
