--- a/cervezas.html
+++ b/cervezas.html
@@ -24,7 +24,7 @@
     .nav a { color:#ffd56b; text-decoration:none; font-weight:600; }
     .nav a:hover { text-decoration: underline; }
     main { flex:1; display:grid; place-items:center; padding:2rem; text-align:center; }
-    .card { background: rgba(0,0,0,0.35); border: 1px solid rgba(255,213,107,0.4); border-radius:12px; padding:2rem 2.25rem; max-width: 860px; }
+    .card { background: rgba(0,0,0,0.35); border: 5px solid rgba(255,213,107,0.4); border-radius:50px; padding:2rem 2.25rem; max-width: 1000px; }
     .brand { font-size: clamp(1.8rem, 4vw, 2.6rem); margin: 0 0 0.5rem; letter-spacing: 0.6px; }
     .subtitle { margin: 0.25rem 0 0.75rem; opacity: 0.9; }
     footer { padding: 1rem; text-align:center; font-size:0.95rem; color:#eaeaea; }
@@ -105,7 +105,7 @@
 <section class="card">
 <h1 class="brand">Nuestras Cervezas</h1>
 <p class="subtitle">Descubre nuestras variedades, estilos y notas de cata.</p>
-<p>Contenido en preparación.</p><section class="lista-cervezas">
+<section class="lista-cervezas">
 
 <div class="cerveza-item">
     <img src="assets/img/Tropical_RAIZ.jpg" alt="Cerveza Tropical">
@@ -121,7 +121,6 @@
     <p class="precio">Precio: $2.500 CLP</p>
     <p class="eslogan">Ideal para acompañar tus mejores momentos.</p>
 </div
-
 
 
 /section>
