--- a/cervezas.html
+++ b/cervezas.html
@@ -10,7 +10,7 @@
     html, body { height: 100%; }
     body {
       margin: 0;
-      overflow-y: hidden;	/* Para ocultar el scroll vertical */
+      /*overflow-y: hidden;	/* Para ocultar el scroll vertical */
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
       color: #f5f5f5;
       background-image: var(--bg-url);
