--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     :root{
-      --bg:#0f0f10; /* fondo oscuro */
+      --bg-url: url('Fondo_raiz.jpg');
       --card:#16171a;
       --text:#e9e9ea;
       --muted:#b7b7bb;
@@ -37,9 +37,9 @@
       display:flex; align-items:center; justify-content:space-between; gap:12px; min-height:56px;
     }
     .brand{font-weight:700; letter-spacing:.3px}
-    .nav-links{display:flex; gap:14px; flex-wrap:wrap}
-    .nav-links a{padding:8px 10px; border-radius:8px}
-    .nav-links a[aria-current="page"]{background:var(--card); color:var(--text)}
+      .nav { display:flex; gap:1rem; padding:1rem; align-items:center; justify-content:center; flex-wrap:wrap; }
+    .nav a { color:#ffd56b; text-decoration:none; font-weight:600; }
+    .nav a:hover { text-decoration: underline; }
 
     /* Diseño principal */
     main{padding:24px 0}
