--- a/contacto.html
+++ b/contacto.html
@@ -27,7 +27,7 @@
       font-family:'Inter', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
       line-height:1.5;
 	  margin: 0;
-	  overflow-y: hidden;	/* Para ocultar el scroll vertical */
+	  /*overflow-y: hidden;	/* Para ocultar el scroll vertical */
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
       color: #f5f5f5;
       background-image: var(--bg-url);
