--- a/contacto.html
+++ b/contacto.html
@@ -61,7 +61,8 @@
       .grid{grid-template-columns: 1.1fr .9fr}
     }
 
-    .card{background:var(--card); border:1px solid #24262b; border-radius:var(--radius); box-shadow:var(--shadow)}
+    /* .card{background:var(--card); border:1px solid #24262b; border-radius:var(--radius); box-shadow:var(--shadow)}
+	.card { background: rgba(0,0,0,0.35); border: 5px solid rgba(255,213,107,0.4); border-radius:50px; padding:2rem 2.25rem; max-width: 5000px; }
     .card .pad{padding:18px}
     h1{font-size:clamp(24px, 3.8vw, 32px); margin:0 0 8px}
     p.lead{color:var(--muted); margin:0 0 14px}
@@ -129,14 +130,12 @@
             <div class="row">
               <div>
                 <label for="nombre">Nombre <span class="req" aria-hidden="true">*</span></label>
-                <input id="nombre" name="nombre" type="text" placeholder="Tu nombre" autocomplete="name" required />
-                <div class="help" id="help-nombre">Cómo deberíamos llamarte.</div>
+                <input id="nombre" name="nombre" type="text" placeholder="Cómo deberíamos llamarte" autocomplete="name" required />
               </div>
               <div>
                 <label for="correo">Correo electrónico <span class="req" aria-hidden="true">*</span></label>
                 <input id="correo" name="correo" type="email" placeholder="tu@correo.com" autocomplete="email" inputmode="email" required />
-                <div class="help" id="help-correo">Usaremos este correo para responderte.</div>
-              </div>
+               </div>
             </div>
 
             <div class="row two">
