--- a/contacto.html
+++ b/contacto.html
@@ -127,7 +127,7 @@
           <p class="lead">Escríbenos para pedidos, colaboraciones o consultas. Te responderemos a la brevedad.</p>
 			
 <!-- FORMULARIO CONFIGURADO PARA NETLIFY -->
-  <form name="contacto" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/gracias.html">
+  <form name="contacto" method="POST" data-netlify="true" netlify-honeypot="bot-field">
     <input type="hidden" name="form-name" value="contacto" />
 
           <form id="contactoForm" novalidate>
