--- a/contacto.html
+++ b/contacto.html
@@ -1,12 +1,15 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contacto — Raíz Cervecera</title>
-  <style>
-	      :root{
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  
+ <style>
+    :root{
      --bg-url: url('Fondo_raiz.jpg');
      --card:#16171a;
      --text:#e9e9ea;
@@ -20,25 +23,103 @@
     }
    *{box-sizing:border-box}
     html,body{height:100%}
-    form { max-width: 640px; margin: 1.5rem auto; display: grid; gap: 0.75rem; }
-    label { font-weight: 600; }
-    input, select, textarea, button { padding: 0.5rem; font-size: 1rem; }
-    .row { display: grid; grid-template-columns: 1fr 1fr; gap: 0.75rem; }
-    .hidden { display: none; }
+    body{
+      margin:0; 
+	  background:var(--bg); 
+	  color:var(--text);
+      font-family:'Inter', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+      /*line-height:1.5;
+	  margin: 0;
+	  overflow-y: hidden;	/* Para ocultar el scroll vertical */
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
+      color: #f5f5f5;
+      background-image: var(--bg-url);
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+    }
+	    .overlay { min-height: 100%; background: rgba(0,0,0,0.45); display: flex; flex-direction: column; }
+		 header { backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(2px); }
+    a{color:var(--primary); text-decoration:none}
+    a:hover{text-decoration:underline}
+
+    /* Cabecera y navegación */
+     header { backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(2px); }
+	    .container{max-width:980px; margin:0 auto; padding:0 16px}
+    .nav{
+      display:flex; align-items:center; justify-content:space-between; gap:12px; min-height:56px;
+    }
+    .brand{font-weight:700; letter-spacing:.3px}
+    .nav { display:flex; gap:1rem; padding:1rem; align-items:left; justify-content:center; flex-wrap:wrap; }
+    .nav a { color:#ffd56b; text-decoration:none; font-weight:600; }
+    .nav a:hover { text-decoration: underline; }
+
+    /* Diseño principal */
+   main { flex:1; display:grid; place-items:center; padding:2rem; text-align:left; }
+    @media (min-width: 700px){
+      .grid{grid-template-columns: 1.1fr .9fr}
+    }
+
+    /* .card{background:var(--card); border:1px solid #24262b; border-radius:var(--radius); box-shadow:var(--shadow)}
+	.card { background: rgba(0,0,0,0.35); border: 5px solid rgba(255,213,107,0.4); border-radius:50px; padding:2rem 2.25rem; max-width: 5000px; }
+    .card .pad{padding:18px}
+    h1{font-size:clamp(24px, 3.8vw, 32px); margin:0 0 8px}
+    p.lead{color:var(--muted); margin:0 0 14px}
+
+    /* Formulario accesible y táctil */
+    form{display:grid; gap:12px}
+    label{font-weight:600; font-size:0.95rem}
+    .req{color:var(--primary); font-weight:700}
+    input, select, textarea{
+      width:100%; background:#101114; color:var(--text);
+      border:1px solid #2b2d33; border-radius:12px; padding:12px 14px;
+      font-size:1rem; transition:border-color .2s, box-shadow .2s;
+    }
+    input::placeholder, textarea::placeholder{color:#858790}
+    input:focus, select:focus, textarea:focus{outline:none; border-color:var(--primary); box-shadow:0 0 0 3px rgba(228,163,11,.15)}
+
+    .row{display:grid; grid-template-columns:1fr; gap:12px}
+    @media (min-width: 768px){ .row.two{grid-template-columns:1fr 1fr} }
+
+    .help{color:var(--muted); font-size:.9rem}
+    .actions{display:flex; gap:12px; flex-wrap:wrap}
+    button{
+      appearance:none; border:0; border-radius:12px; cursor:pointer;
+      padding:12px 16px; font-weight:700; letter-spacing:.2px; font-size:1rem;
+    }
+    .btn-primary{background:var(--primary); color:#111}
+    .btn-primary:hover{background:var(--primary-700)}
+    .btn-ghost{background:transparent; color:var(--text); border:1px solid #2b2d33}
+
+    /* Estado */
+    .status{display:none; margin-top:8px; font-weight:600}
+    .status.ok{color:var(--ok)}
+    .status.err{color:var(--error)}
+
+    /* Pie */
+    footer{color:var(--muted); border-top:1px solid #23252a; margin-top:28px}
+    .social{display:flex; gap:10px; flex-wrap:wrap}
+
+    /* Mejoras de toque */
+    @media (hover: none){
+      a, button{min-height:44px}
+    }
   </style>
 </head>
 <body>
+<div class="overlay">
   <header>
-    <nav>
-      <a href="index.html">Inicio</a>
-      <a href="quienes-somos.html">Quienes somos</a>
-      <a href="cervezas.html">Nuestras Cervezas</a>
-      <a href="contacto.html">Contacto</a>
-      <a href="login.html">Login</a>
-    </nav>
+ <nav aria-label="Principal" class="nav">
+<a href="index.html">Inicio</a>
+<a href="quienes-somos.html">Quienes somos</a>
+<a href="cervezas.html">Nuestra Cervezas</a>
+<a href="contacto.html">Contacto</a>
+<a href="login.html">Login</a>
+</nav>
   </header>
 
-  <main>
+ <main>
     <h2>Contacto</h2>
     <p>Escríbenos para pedidos, colaboraciones o consultas. Te responderemos a la brevedad.</p>
 
@@ -54,15 +135,15 @@
       </p>
 
       <label for="nombre">Nombre *</label>
-      <input id="nombre" name="nombre" type="text" required />
+      <input id="nombre" name="nombre" type="text" placeholder="Cómo deberíamos llamarte" autocomplete="name" required />
 
       <label for="email">Correo electrónico *</label>
-      <input id="email" name="email" type="email" required />
+      <input id="correo" name="correo" type="email" placeholder="tu@correo.com" autocomplete="email" inputmode="email" required />
 
       <div class="row">
         <div>
           <label for="fono">Fono (opcional)</label>
-          <input id="fono" name="fono" type="tel" />
+          <input id="fono" name="fono" type="tel" placeholder="+56 9 1234 5678" autocomplete="tel" inputmode="tel" />
         </div>
         <div>
           <label for="tipo">Tipo de consulta</label>
@@ -76,10 +157,10 @@
       </div>
 
       <label for="asunto">Asunto *</label>
-      <input id="asunto" name="asunto" type="text" required />
+      <input id="asunto" name="asunto" type="text" placeholder="Pedido / Consulta" required />
 
       <label for="mensaje">Mensaje *</label>
-      <textarea id="mensaje" name="mensaje" rows="6" required></textarea>
+      <textarea id="mensaje" name="mensaje" rows="6" placeholder="Cuéntanos los detalles" required></textarea>
 
       <div class="row">
         <button type="submit">Enviar</button>
@@ -93,5 +174,24 @@
     <a href="https://web.facebook.com/RaizCervecera">Facebook</a>
     <p>© Raíz Cervecera — Todos los derechos reservados</p>
   </footer>
+
+  <script>
+    // Validación ligera en el cliente y feedback accesible
+    const form = document.getElementById('contactoForm');
+    const ok = document.getElementById('statusOk');
+    const err = document.getElementById('statusErr');
+
+    form.addEventListener('submit', function(e){
+      e.preventDefault();
+      err.style.display = 'none';
+      ok.style.display = 'none';
+      if(form.checkValidity()){
+        ok.style.display = 'block';
+        form.reset();
+      } else {
+        err.style.display = 'block';
+      }
+    });
+  </script>
 </body>
 </html>
