--- a/cervezas.html
+++ b/cervezas.html
@@ -122,7 +122,9 @@
     <img src="assets/img/PaleAle_RAIZ.jpg" alt="Cerveza Pale Ale">
     <h3>Cerveza Pale Ale Premium</h3>
     <p class="precio">Precio: $2.500 CLP</p>
-    <p class="eslogan">Ideal para acompañar tus mejores momentos.</p>
+    <p class="eslogan">Una "PALE ALE RAIZ" es vérsatil, fresca y con un toque cítrico/lupulado</p>
+	<p class="eslogan">Maridaje ideal con pollo a la parrilla o al horno, con especias, limón o hierbas, comidas mexicanas, quesadillas, pescados, quesos, papas fritas, empanadas. </p>
+	<p class="eslogan">Temperatura ideal a servir es entre 8° a 10° C.</p>
 </div
 
 
@@ -132,9 +134,10 @@
     <img src="assets/img/Stout_RAIZ.jpg" alt="Cerveza Stout">
     <h3>Cerveza Stout Premium</h3>
     <p class="precio">Precio: $2.500 CLP</p>
-    <p class="eslogan">Ideal para acompañar tus mejores momentos.</p>
+    <p class="eslogan">Para una "STOUT RAÍZ" se pide compañia que respete su cuerpo cremoso y amargo, con notas de café tostado y cacao.</p>
+	<p class="eslogan">Maridaje ideal con carnes, costillitas, estofados, hamburguesas, quesos intensos, champiñones salteados..</p>
+	<p class="eslogan">Temperatura ideal a servir es entre 8° a 10° C.</p>
 </div
-
 
 
 </section>
