--- a/cervezas.html
+++ b/cervezas.html
@@ -149,7 +149,20 @@
 	<p class="eslogan">Temperatura ideal a servir es entre 8° a 10° C.</p>
 </div
 </section>
+/section>
 
+<div class="cerveza-item">
+    <img src="assets/img/StoutDry_RAIZ_RAIZ.jpg" alt="Cerveza Stout Dry">
+    <h3>Cerveza Stout Dry Premium</h3>
+    <p class="precio">Precio: $2.500 CLP</p>
+    <p class="eslogan">Nuestra cerveza IPA tiene un amargor intenso y prolongado, siendo el lúpulo el actor principal</p>
+	<p class="eslogan">Maridaje ideal con comidas picantes como los guisos de curry o snack picantes, quesos como el queso azul o queso feta que complementan bien el amargor de la "IPA" Raíz..</p>
+	<p class="eslogan">Temperatura ideal a servir es entre 8° a 10° C.</p>
+</div
+
+
+
+</section>
 
 
 </section>
