--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -38,7 +38,7 @@
       <nav class="nav" aria-label="Principal">
   <a href="index.html">Inicio</a>
   <a href="quienes-somos.html">Quienes somos</a>
-  <a href="cervezas.html">Nuestra Cervezas</a>
+  <a href="cervezas.html">Nuestras Cervezas</a>
   <a href="contacto.html">Contacto</a>
   <a href="login.html">Login</a>
 </nav>
