--- a/contacto.html
+++ b/contacto.html
@@ -84,13 +84,16 @@
 
     .help{color:var(--muted); font-size:.9rem}
     .actions{display:flex; gap:12px; flex-wrap:wrap}
-    button{
+button{
       appearance:none; border:0; border-radius:12px; cursor:pointer;
       padding:12px 16px; font-weight:700; letter-spacing:.2px; font-size:1rem;
     }
     .btn-primary{background:var(--primary); color:#111}
     .btn-primary:hover{background:var(--primary-700)}
-    .btn-ghost{background:transparent; color:var(--text); border:1px solid #2b2d33}
+	
+	   .btn-ghost{background:var(--primary); color:#111}
+    .btn-ghost:hover{background:var(--primary-700)}
+    /* .btn-ghost{background:transparent; color:var(--text); border:1px solid #2b2d33}
 
     /* Estado */
     .status{display:none; margin-top:8px; font-weight:600}
@@ -98,8 +101,12 @@
     .status.err{color:var(--error)}
 
     /* Pie */
-    footer{color:var(--muted); border-top:1px solid #23252a; margin-top:28px}
-    .social{display:flex; gap:10px; flex-wrap:wrap}
+	 
+     footer{color:var(--muted); border-top:1px solid #23252a; margin-top:28px; text-align:center;}
+    /*.social{display:flex; gap:10px; flex-wrap:wrap}
+    footer { padding: 1rem; text-align:center; font-size:0.95rem; color:#eaeaea; }
+    /* footer a { color:#ffd56b; text-decoration:none; }
+   /* footer a:hover { text-decoration: underline; }	
 
     /* Mejoras de toque */
     @media (hover: none){
@@ -158,8 +165,8 @@
       <textarea id="mensaje" name="mensaje" rows="6" placeholder="Cuéntanos los detalles" required></textarea>
 
       <div class="row">
-        <button type="submit">Enviar</button>
-        <button type="reset">Limpiar</button>
+        <button type="submit" class="btn-primary">Enviar</button>
+        <button type="reset" class="btn-ghost">Limpiar</button>
       </div>
     </form>
   </main>
