--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -48,7 +48,7 @@
         <h1 class="brand">Quienes somos</h1>
         <p class="subtitle">Somos tres familias de la ciudad del sol - Quilpué, unidas para crear cerveza artesanal de alta calidad.</p>
         <p>Honramos nuestras raíces, utilizando ingreedientes selectos y procesos de cuidados para ofrecer una experiencia </p>
-        <p>auténtica y carcana en cada botella". </p>
+        <p>auténtica y cercana en cada botella". </p>
       </section>
     </main>
     <footer>
