--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -47,7 +47,7 @@
       <section class="card">
         <h1 class="brand">Quienes somos</h1>
         <p class="subtitle">Somos tres familias de la ciudad del sol - Quilpué, unidas para crear cerveza artesanal de alta calidad.</p>
-        <p>Honramos nuestras raíces, utilizando ingreedientes selectos y procesos de cuidados para ofrecer una experiencia </p>
+        <p>Honramos nuestras raíces, utilizando ingredientes selectos y procesos de cuidados para ofrecer una experiencia </p>
         <p>auténtica y cercana en cada botella". </p>
       </section>
     </main>
