--- a/cervezas.html
+++ b/cervezas.html
@@ -152,8 +152,8 @@
     <img src="assets/img/StoutDry_RAIZ.jpg" alt="Cerveza Stout Dry">
     <h3>Cerveza Stout Dry Premium</h3>
     <p class="precio">Precio: $2.500 CLP</p>
-    <p class="eslogan">Nuestra cerveza IPA tiene un amargor intenso y prolongado, siendo el lúpulo el actor principal</p>
-	<p class="eslogan">Maridaje ideal con comidas picantes como los guisos de curry o snack picantes, quesos como el queso azul o queso feta que complementan bien el amargor de la "IPA" Raíz..</p>
+    <p class="eslogan">Para una "STOUT DRY RAÍZ" se pide compañia que respete su cuerpo cremoso y amargo, con notas de café tostado y cacao.</p>
+	<p class="eslogan">Maridaje ideal con carnes, costillitas, estofados, hamburguesas, quesos intensos, champiñones salteados..</p>
 	<p class="eslogan">Temperatura ideal a servir es entre 8° a 10° C.</p>
 </div
 </section>
